added java tuning and moved jvm opts to the top